--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+
 *.aseprite.meta
+./aseprite/*.png.meta
